--- a/index.html
+++ b/index.html
@@ -1,74 +1,84 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pokemon Fight</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="body">
-    <header>
-        <img class="logo"
-             title="Reset Game"
-             src="./assets/Pokemon_logo.png"
-             alt="Pokemon">
-    </header>
-    <div class="playground">
-        <div class="pokemon character">
-            <span class="lvl">Lv. 1</span>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="body">
+      <header>
+        <img
+          class="logo"
+          title="Reset Game"
+          src="./assets/Pokemon_logo.png"
+          alt="Pokemon"
+        />
+      </header>
+      <div class="playground">
+        <div class="pokemon player1">
+          <span class="lvl">Lv. 1</span>
 
-            <img src="http://sify4321.000webhostapp.com/pikachu.png" class="sprite">
+          <img
+            src="http://sify4321.000webhostapp.com/pikachu.png"
+            class="sprite"
+            id="img-player1"
+          />
 
-            <div class="details">
-                <h2 class="name" id="name-character">
-                    Pikachu
-                </h2>
-                <div class="hp">
-                    <div class="bar">
-                        <div class="health" id="progressbar-character" style="width: 100%;"></div>
-                    </div>
-                    <span class="text" id="health-character">100 / 100</span>
-                </div>
+          <div class="details">
+            <h2 class="name" id="name-player1">Pikachu</h2>
+            <div class="hp">
+              <div class="bar">
+                <div
+                  class="health health-player1"
+                  id="progressbar-player1"
+                  style="width: 100%"
+                ></div>
+              </div>
+              <span class="text" id="health-player1">100 / 100</span>
             </div>
+          </div>
         </div>
 
         <div class="control">
-            <button class="button" id="btn-kick">
-                Thunder Jolt
-            </button>
+          <div class="left"></div>
+          <div class="right"></div>
         </div>
-        <div class="control">
-            <button class="button" id="btn-shot">
-                Ulta
-            </button>
-        </div>
+      
 
+        <div class="pokemon player2">
+          <span class="lvl">Lv. 1</span>
 
-        <div class="pokemon enemy">
-            <span class="lvl">Lv. 1</span>
+          <img
+            src="http://sify4321.000webhostapp.com/charmander.png"
+            class="sprite"
+            id="img-player2"
+          />
 
-            <img src="http://sify4321.000webhostapp.com/charmander.png" class="sprite">
-
-            <div class="details">
-                <h2 class="name" id="name-enemy">
-                    Charmander
-                </h2>
-                <div class="hp">
-                    <div class="bar">
-                        <div class="health" id="progressbar-enemy" style="width: 100%;"></div>
-                    </div>
-                    <span class="text" id="health-enemy">100 / 100</span>
-                </div>
+          <div class="details">
+            <h2 class="name" id="name-player2">Charmander</h2>
+            <div class="hp">
+              <div class="bar">
+                <div
+                  class="health health-player2"
+                  id="progressbar-player2"
+                  style="width: 100%"
+                ></div>
+              </div>
+              <span class="text" id="health-player2">100 / 100</span>
             </div>
+          </div>
         </div>
+      </div>
+      <div id="logs"></div>
     </div>
-    <div id = "logs"></div>
-</div>
-<div class="catch_screen"></div>
+    <div class="catch_screen"></div>
 
-<script src="main.js" type="module"></script>
-</body>
+    <script src="main.js" type="module"></script>
+  </body>
 </html>
